# u1-cht

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  PLAN.md  README.md  WORKLIST.md  config.json.example  main.cpp
.github/workflows/: release.yml
assets/sfx/mame-floppy/: ATTRIBUTION.md
assets/strings/: zh-Hant.json
assets/strings/zh-Hant/: ui.json
docker/: Dockerfile  Dockerfile.a2  Dockerfile.mame  Dockerfile.msxrun  Dockerfile.re  Dockerfile.z80
docs/: ANDROID-PLAN.md  DEV-SETUP.md  engineering-notes.md  game-mechanics.md  keybindings.md  llm-promo-video-pipeline.md  localization-notes.md  materials.md  music.md  plan-town-combat.md  promo-video-style.md  ultima1-original-ai.md
docs/adr/: 0001-pluggable-asset-packs.md
docs/re/: 6502-re-methodology.md  README.md  apple-iigs-reverse-engineering.md  apple2gs-emulation-experience.md  atari-tileset-re.md  e2-apple-iigs.md  e3-msx.md  fmtowns-u1-graphics.md  iigs-65816-re.md  openmsx-build-experience.md  openmsx-setup.md
packaging/: README-dist.txt  build-appimage.sh  build-macos.sh  build-windows.sh  dist-config.json  make_complete_backup.sh  make_promo_video.sh  mingw-toolchain.cmake  u1_cht.desktop
src/: CharCreation.h  Combat.h  CommandDisplay.cpp  CommandDisplay.h  Configuration.cpp  Configuration.h  GameContext.h  ItemCatalog.h  Player.h  PlayerStatusDisplay.cpp  SaveGame.cpp  SaveGame.h
src/common/: Audio.cpp  Audio.h  CardinalPoint.h  Fonts.cpp  Fonts.h  I18n.cpp  I18n.h
src/common/graphics/: EGARowPlanarDecodeStrategy.cpp  LTexture.cpp  SpriteSheetLoader.cpp  SpriteSheetLoader.h
src/dungeon/: ChestInfo.h  Dungeon.cpp  Dungeon.h  DungeonScreen.cpp  DungeonScreen.h  VisibleDungeonSpace.h
src/dungeon/enemies/: DungeonMonster.cpp  DungeonMonster.h  Enemy.h  GiantRat.h  Thief.h
src/overworld/: Bestiary.h  OverworldEnemy.h  OverworldScreen.cpp  OverworldScreen.h  OverworldTile.h  TileTypeLoader.cpp  TileTypeLoader.h
src/space/: SpaceScreen.cpp  SpaceScreen.h
src/town/: TownScreen.cpp  TownScreen.h
tools/: build_atari_pack.py  build_fmtowns_pack.py  build_iigs_pack.py  build_msx_pack.py  build_pc98_pack.py  build_vga_pack.py  cga_tiles_to_png.py  fix_fmtowns_monsters.py  game_tester.sh  gen_placeholder_music.sh  make_tileset_compare.py  render_eup_music.py  render_mcp_music.py  render_pc98_music.py  rip_atari_tiles.py  shot.sh  t1k_tiles_to_png.py  tiles_to_png.py
tools/re/: atari_extract.py  dis6502.py  fmtowns_dec16.py  fmtowns_decode.py  fmtowns_u1_decode.py
tools/re/iigs/: dis65816.py  extract_woz.py  lzss_decode.py  mame_dump.lua  mame_nav_chargen.lua  omf_parse.py  render_shr.py
tools/re/msx/: U1MSX2.xml  decode_msxtiles.py  dump.tcl  mkc2.tcl  nav.tcl  nav4.tcl  play.tcl  probe.tcl  swap.tcl
